# GSM

./: .gitignore  Cargo.toml  store.txt
src/: app_actions.rs  app_commands.rs  lib.rs  main.rs
ui/: colors.slint  comparison.slint  data_feed.slint  data_structures.slint  dealer_page.slint  design_data.slint  header.slint  main.slint  product_page.slint  sidebar.slint  text.slint  utils.slint
