[package]
name = "general_store_manager"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]

[dependencies]
phonenumber = "0.3.6"
rusqlite = "0.32.1"
slint = "1.9.1"
levenshtein = "1.0.5"

[build-dependencies]
slint-build = "1.9.0"
